[project]
name = "secondsight"
version = "0.0.1"
authors = ["Dan Lidral-Porter <dlp@aperiodic.org>"]

[dependencies]
libc = "*"

[dependencies.xlib]
git = "https://github.com/servo/rust-xlib.git"

[dependencies.x11]
git = "https://github.com/Daggerbot/x11-rs.git"
features = ["xrender"]

[[bin]]
name = "secondsight"
